feat: add links to partner logos

--- a/src/pages/partners.html
+++ b/src/pages/partners.html
@@ -19,8 +19,8 @@
     <div class="row">
     <div class="col-sm-offset-3 col-sm-6 col-xs-12 text-center">
         <br/>
-        <img style="padding-right: 10px; padding-left: 10px" class="visible-xs" src="/static/images/LOGO1.png">
-        <img class="hidden-xs" src="/static/images/LOGO1.png">
+        <a href="https://mea.gouvernement.lu/en.html" target="_partner"><img style="padding-right: 10px; padding-left: 10px" class="visible-xs" src="/static/images/LOGO1.png"></a>
+        <a href="https://mea.gouvernement.lu/en.html" target="_partner"><img class="hidden-xs" src="/static/images/LOGO1.png"></a>
     </div>
     </div>
     <div class="row">
@@ -33,7 +33,7 @@
     <div class="row">
         <div class="col-sm-offset-3 col-sm-6">
             <div class="col-sm-4 text-center">
-                <img style="max-width: 150px" src="/static/images/logo_uni.png"/>
+                <a href="https://www.aktioun-nohaltegkeet.lu/" target="_partner"><img style="max-width: 150px" src="/static/images/logo_uni.png"/></a>
             </div>
             <div class="hidden-xs col-sm-4 text-center">
                 <br/>
@@ -45,7 +45,7 @@
                 </table>
             </div>
             <div class="col-sm-4 text-center">
-                <img style="margin-top: 10px;" src="/static/images/green-map.png"/>
+                <a href="https://new.opengreenmap.org" target="_partner"><img style="margin-top: 10px;" src="/static/images/green-map.png"/></a>
             </div>
         </div>
     </div>
@@ -72,8 +72,8 @@
     <div class="row">
         <div class="col-sm-offset-3 col-sm-6 col-xs-12 text-center">
             <br/>
-            <img style="padding-right: 10px; padding-left: 10px" class="visible-xs" src="/static/images/LOGO1.png">
-            <img class="hidden-xs" src="/static/images/LOGO1.png">
+            <a href="https://mea.gouvernement.lu/de.html" target="_partner"><img style="padding-right: 10px; padding-left: 10px" class="visible-xs" src="/static/images/LOGO1.png"></a>
+            <a href="https://mea.gouvernement.lu/de.html" target="_partner"><img class="hidden-xs" src="/static/images/LOGO1.png"></a>
         </div>
     </div>
     <div class="row">
@@ -86,7 +86,7 @@
     <div class="row">
         <div class="col-sm-offset-3 col-sm-6">
             <div class="col-sm-4 text-center">
-                <img style="max-width: 150px" src="/static/images/logo_uni.png"/>
+                <a href="https://www.aktioun-nohaltegkeet.lu/" target="_partner"><img style="max-width: 150px" src="/static/images/logo_uni.png"/></a>
             </div>
             <div class="hidden-xs col-sm-4 text-center">
                 <br/>
@@ -98,7 +98,7 @@
                 </table>
             </div>
             <div class="col-sm-4 text-center">
-                <img style="margin-top: 10px;" src="/static/images/green-map.png"/>
+                <a href="https://new.opengreenmap.org" target="_partner"><img style="margin-top: 10px;" src="/static/images/green-map.png"/></a>
             </div>
         </div>
     </div>
@@ -115,7 +115,7 @@
 <div class="row">
     <div class="col-sm-12 text-center" style="padding-left: 3px; padding-right: 3px">
         <br/>
-        <h1 class="color-orange">Partner</h1><br/>
+        <h1 class="color-orange">Partenaires</h1><br/>
     </div>
     <div class="row">
         <div class="col-xs-12 text-center">
@@ -125,8 +125,8 @@
     <div class="row">
         <div class="col-sm-offset-3 col-sm-6 col-xs-12 text-center">
             <br/>
-            <img style="padding-right: 10px; padding-left: 10px" class="visible-xs" src="/static/images/LOGO1.png">
-            <img class="hidden-xs" src="/static/images/LOGO1.png">
+            <a href="https://mea.gouvernement.lu/fr.html" target="_partner"><img style="padding-right: 10px; padding-left: 10px" class="visible-xs" src="/static/images/LOGO1.png"></a>
+            <a href="https://mea.gouvernement.lu/fr.html" target="_partner"><img class="hidden-xs" src="/static/images/LOGO1.png"></a>
         </div>
     </div>
     <div class="row">
@@ -139,7 +139,7 @@
     <div class="row">
         <div class="col-sm-offset-3 col-sm-6">
             <div class="col-sm-4 text-center">
-                <img style="max-width: 150px" src="/static/images/logo_uni.png"/>
+                <a href="https://www.aktioun-nohaltegkeet.lu/" target="_partner"><img style="max-width: 150px" src="/static/images/logo_uni.png"/></a>
             </div>
             <div class="hidden-xs col-sm-4 text-center">
                 <br/>
@@ -151,7 +151,7 @@
                 </table>
             </div>
             <div class="col-sm-4 text-center">
-                <img style="margin-top: 10px;" src="/static/images/green-map.png"/>
+                <a href="https://new.opengreenmap.org" target="_partner"><img style="margin-top: 10px;" src="/static/images/green-map.png"/></a>
             </div>
         </div>
     </div>
