--- a/miller/contacts.html
+++ b/miller/contacts.html
@@ -683,10 +683,10 @@
 </script>
 <div class="container-fluid" style="margin: 50px">
   <div class="row">
-    <div class="col-xs-offset-2 col-xs-8">
+    <div class="col-xs-offset-3 col-xs-6">
   <div class="row">
     <div class="col" style="margin-bottom: 30px;">
-      <h1 translate="headline.about">{% lookupmulti locale "propose.a.project" language %}</h1>
+      <h1 class="color-orange" translate="headline.about">{% lookupmulti locale "propose.a.project" language %}</h1>
       {% if form.errors %}
       <br/><br/>
       <p style="font-size: large; color: orangered">{% lookupmulti locale "correct.errors" language %}</p>
@@ -695,7 +695,7 @@
   </div>
   <form role="form" method="POST" action="">
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-12">
         <div class="form-group {% if form.errors.first_name %}has-error{% endif %}">
           <label for="id_signup_first_name" style="font-size: larger">{% lookupmulti locale "firstname" language %}*</label>
 
@@ -705,7 +705,7 @@
           {% endif %}
         </div>
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-12">
         <div class="form-group {% if form.errors.last_name %}has-error{% endif %}">
           <label for="id_signup_last_name" style="font-size: larger">{% lookupmulti locale "lastname" language %}*</label>
           <input type="text" class="form-control" value='{{ form.last_name.value|default_if_none:"" }}' id="id_signup_last_name" autofocus="autofocus" name="last_name" placeholder="" >
@@ -715,7 +715,7 @@
         </div>
 
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-12">
         <div class="form-group {% if form.errors.email_from %}has-error{% endif %}">
           <label for="id_signup_email_from" style="font-size: larger">{% lookupmulti locale "email" language %}*</label>
           <input type="text" value='{{ form.email_from.value|default_if_none:"" }}' class="form-control" id="id_signup_email_from"  name="email_from">
@@ -776,14 +776,13 @@
   <div class='container'>
     <div class="row">
 
-      <div class='col-sm-12' style="background-color: #f26951">
-        <div class="col-sm-7" style="height:80px;padding-top:20px" >
-          <div ui-sref-active="active" class="text-right"><a class='footer' href ui-sref='page({name:"terms-of-use"})' translate='footer.termsofservice'></a>
-          </div>
-        </div>
-        <div class="col-sm-3 text-right color-white" style="height:80px;padding-top:20px">BIBE@CELL.LU&nbsp;&nbsp;&nbsp;&nbsp;&copy; BIBE 2021 </div>
-        <div class="col-sm-1 text-right" style="padding-top: 15px"><img width='100px' src='{% static "images/CELL_whitebkgrnd.png" %}'/></div>
-
+      <div class='col-xs-12' style="background-color: #f26951" style="height:80px;">
+        <div class="col-sm-1 col-xs-12">&nbsp;</div>
+        <div class="col-sm-2 col-xs-12 text-center" style="padding-top: 23px"><a class='footer' href="/terms-of-use">{% lookupmulti locale "footer.termsofservice" language %}</a></div>
+        <div class="col-sm-2 col-xs-12 color-white text-center" style="padding-top: 23px">BIBE@CELL.LU</div>
+        <div class="col-sm-2 col-xs-12 text-center"><a href="https://www.cell.lu" target="_cell"><img width='150px' src='{% static "images/CELL_Logo_all_White.png" %}'/></a></div>
+        <div class="col-sm-2 col-xs-12 color-white text-center" style="padding-top: 23px">designed by <img width='60px' src='{% static "images/logo-moloko.svg" %}'/></div>
+        <div class="col-sm-2 col-xs-12 color-white text-center" style="padding-top: 23px">&copy; BIBE 2022<br/><br/></div>
       </div>
     </div>
   </div>
