--- a/miller/contacts.html
+++ b/miller/contacts.html
@@ -760,7 +760,7 @@
     </div>
     <br/><br/>
     {% if next %}
-    <a class="btn btn-primary" href='{{ next }}' type="submit" style="font-size: x-large;text-transform: uppercase">
+    <a class="btn btn-primary" href='/map' type="submit" style="font-size: x-large;text-transform: uppercase">
       <span>{% lookupmulti locale "back" language %}</span>
     </a>
     {% endif %}
