--- a/miller/index.html
+++ b/miller/index.html
@@ -10,7 +10,7 @@
           <div class="col-sm-1 col-xs-12">&nbsp;</div>
           <div class="col-sm-2 col-xs-12 text-center" style="padding-top: 23px"><a class='footer' href ui-sref='page({name:"terms-of-use"})' translate='footer.termsofservice'></a></div>
           <div class="col-sm-2 col-xs-12 color-white text-center" style="padding-top: 23px">BIBE@CELL.LU</div>
-          <div class="col-sm-2 col-xs-12 text-center"><img width='150px' src='{% static "images/CELL_Logo_all_White.png" %}'/></div>
+          <div class="col-sm-2 col-xs-12 text-center"><a href="https://www.cell.lu" target="_cell"><img width='150px' src='{% static "images/CELL_Logo_all_White.png" %}'/></a></div>
           <div class="col-sm-2 col-xs-12 color-white text-center" style="padding-top: 23px">designed by <img width='60px' src='{% static "images/logo-moloko.svg" %}'/></div>
           <div class="col-sm-2 col-xs-12 color-white text-center" style="padding-top: 23px">&copy; BIBE 2022<br/><br/></div>
         </div>
