fix: logo on contact page

--- a/miller/contacts.html
+++ b/miller/contacts.html
@@ -16,7 +16,7 @@
       </button>
       <div class='navbar-brand' id="logo" style="align-content: center">
         <a href="/">
-          <img style="margin-left: 5rem;margin-top: 1rem; width: 15rem" src='{% static "/images/logo_bibe.svg" %}'>
+          <img style="margin-left: 5rem;margin-top: 1rem; width: 15rem" src='{% static "/images/logo-bibe-sans-sud.svg" %}'>
         </a>
       </div>
     </div>
